--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Code Quiz</title>
 </head>
+
 <body>
-    
+    <header>
+    <h3 id="High-Scores">View High Scores</h3>
+    <h3 id="Timer">Time Left:<span id="Timer"></span></h3>
+    </header>
+
+    <div id="Starter-Holder" class="Display">
+        <div class="Start">
+            <h1>Coding Quiz Challenge</h1>
+            <p>Welcome to the coding quiz challenge! Answer the follwing questions within 10 seconds.
+                For every correct answer you will be rewarded 10 points! For every incorrect anwser, 5 points will be deducted and your time will be reduced by 3 seconds.
+            </p>
+            <button class="Button Starter" id="Start-Game">Start Quiz</button>
+            
+        </div>
+    </div>
+ 
+<link rel="assets/quiz.js">    
 </body>
 </html>
