--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Code Quiz | FUN </title>
+        <title>Coding Quiz Challenge </title>
         <link rel="stylesheet" href="./assets/style.css">
     </head>
 
@@ -57,10 +57,10 @@
     </div>
 
     <div class="hide" id="correct">
-        <h2> CORRECT </h2>
+        <h2> CORRECT!! </h2>
     </div>
     <div class="hide" id="wrong">
-        <h2> INCORRECT </h2>
+        <h2> INCORRECT!! </h2>
     </div>
 
     <script src="./assets/quiz.js"></script> 
